PMG - Fix table header cells - Right align

--- a/wegas-app/src/main/webapp/wegas-pmg/css/wegas-pmg.css
+++ b/wegas-app/src/main/webapp/wegas-pmg/css/wegas-pmg.css
@@ -1126,6 +1126,14 @@ h2{
     border-left:none;
 }
 
+.pmg--body .yui3-datatable-header{
+    padding: 0 16px 8px 16px;
+}
+.pmg--body .yui3-datatable-header.right{
+    text-align:right;
+}
+
+
 td.yui3-datatable-col-Realised:after {
     content: " %";
 }
@@ -1139,7 +1147,7 @@ td.yui3-datatable-col-Realised:after {
 .pmg--body .yui3-datatable-even .yui3-datatable-cell{
     background: none;
     height: 40px;
-    padding: 0 25px 0 10px;
+    padding: 0 16px 0 16px;
 }
 .yui3-skin-sam .yui3-datatable-data .yui3-datatable-even .yui3-datatable-sorted,
 .yui3-skin-sam .yui3-datatable-data .yui3-datatable-odd .yui3-datatable-sorted  {
@@ -1149,6 +1157,8 @@ td.yui3-datatable-col-Realised:after {
     border-color: lightgray;
     border-bottom:1px solid lightgray;
 }
+
+
 
 /*---------------------------- schedulecolumn -------------------------------- */
 .yui3-datatable-table th.schedulecolumn {
